dataset1235/2025-2/805158916/users/566502422/executions/2651470117_1462915504.log
== RUN (2025-08-26 01:44:45)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("digite o valor do lado"))
import math
apotema = lado/(2*(math.tan(math.pi/5)))
area = 5/2*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
digite o valor do lado139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
digite o valor do lado61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
digite o valor do lado208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
digite o valor do lado110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
digite o valor do lado27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
digite o valor do lado172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:44:51)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("digite o valor do lado"))
import math
apotema = lado/(2*(math.tan(math.pi/5)))
area = 5/2*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
digite o valor do lado139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
digite o valor do lado61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
digite o valor do lado208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
digite o valor do lado110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
digite o valor do lado27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
digite o valor do lado172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:44:02)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("digite o valor do lado"))
import math
apotema = lado/2*(math.tan(math.pi/5))
area = 5/2*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
digite o valor do lado73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
digite o valor do lado32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
digite o valor do lado109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
digite o valor do lado58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
digite o valor do lado14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
digite o valor do lado90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:41:45)
-- CODE: 
from math import *

# faça seu código aqui!
lado = float(input("digite o valor do lado"))
apotema = lado/2*math.tan(math.pi/5)
area = 5/2*lado*apotema
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/2*math.tan(math.pi/5)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/2*math.tan(math.pi/5)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/2*math.tan(math.pi/5)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/2*math.tan(math.pi/5)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/2*math.tan(math.pi/5)
                     ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/2*math.tan(math.pi/5)
                     ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
